# salary-data

./: .gitignore  etl.py  pyproject.toml
.github/workflows/: etl.yml
