[tool.poetry]
name = "salary"
version = "0.1.0"
description = ""
authors = ["Mark LeBoeuf"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "^1.5.0"
lxml = "^4.9.1"
awswrangler = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"